--- a/src/App.scss
+++ b/src/App.scss
@@ -112,9 +112,9 @@ header {
   .my-pic {
     padding: 28px;
 
-    // img {
-    //   border-radius: 40%;
-    // }
+    img {
+      border-radius: 40%;
+    }
   }
 }
 
